# LIDAR-Viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: cube.frag  cube.vert
assets/shaders/compute/: voxel_downsample.comp  voxel_downsample_filter.comp
assets/shaders/cube/: cube.frag  cube.vert
assets/shaders/text/: text.frag  text.vert
cmake/: macros.cmake
cmake/config/: imgui-config.cmake  lazperf-config.cmake  tinyfiledialog-config.cmake
core/: CMakeLists.txt
core/include/: AppContext.hpp  CubeRenderer.hpp  CustomReader.hpp  UserInterface.hpp
core/include/app/: App.hpp  AppContext.hpp  UserInterface.hpp
core/include/camera/: Camera.hpp  FreeCamera.hpp  OrbitalCamera.hpp
core/include/reader/: CustomLargeFileReader.hpp  CustomLazHeader.hpp  CustomReader.hpp  LazHeader.hpp  LazReader.hpp  Point.hpp
core/include/renderer/: Camera.hpp  ColorRamp.hpp  Cube.hpp  CubeInstance.hpp  CubeRenderer.hpp  RendererHelper.hpp  TextRenderer.hpp
core/include/renderer/filters/: VoxelDownsample.hpp  VoxelDownsampleFilter.hpp
core/include/renderer/utils/: ColorLUT.hpp  RendererHelper.hpp
core/src/: CubeRenderer.cpp  CustomReader.cpp  UserInterface.cpp
core/src/app/: App.cpp  AppContext.cpp  UserInterface.cpp
core/src/camera/: FreeCamera.cpp  OrbitalCamera.cpp
core/src/reader/: CustomLargeFileReader.cpp  CustomReader.cpp  LazReader.cpp  Point.cpp
core/src/renderer/: Camera.cpp  CubeRenderer.cpp  RendererHelper.cpp  TextRenderer.cpp
core/src/renderer/filters/: VoxelDownsample.cpp  VoxelDownsampleFilter.cpp
core/src/renderer/utils/: ColorLUT.cpp  RendererHelper.cpp
plugin/: CMakeLists.txt  CustomLazReader.cpp  CustomLazReader.hpp  Header.cpp  Header.hpp
plugin/Laz-Reader/: CMakeLists.txt  CustomLazReader.cpp  CustomLazReader.hpp
plugin/Voxel-Downsize-Streamable-Filter/: CMakeLists.txt  CustomVoxelDownsizeFilter.cpp  CustomVoxelDownsizeFilter.hpp
src/: main.cpp
