CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(point-cloud-viewer)

# SET LANGUAGE STANDARD
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# LINK LIBRARIES
FIND_PACKAGE(PDAL CONFIG REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glad CONFIG REQUIRED)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)
FIND_PACKAGE(SDL3_ttf CONFIG REQUIRED)

# ADD SUBDIRECTORIES
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(external)

# CREATE EXECUTABLE
ADD_EXECUTABLE(main src/main.cpp)

# INCLUDE LIBRARIES IN TARGET
TARGET_LINK_LIBRARIES(main PRIVATE 
    core
    imgui
    SDL3::SDL3
    SDL3_ttf::SDL3_ttf
    OpenGL::GL
    glad::glad
    ${PDAL_LIBRARIES}
)
TARGET_INCLUDE_DIRECTORIES(main PRIVATE 
    ${PDAL_INCLUDE_DIRS}
    ${PDAL_INCLUDE_DIRS}/pdal
)

# COPY ASSETS FOLDER TO BUILD DIRECTORY
FILE(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION ${CMAKE_BINARY_DIR})

# HANDLE TESTING
# ENABLE_TESTING()
# ADD_SUBDIRECTORY(test)
# ADD_TEST(NAME unit_tests COMMAND unit_tests)