CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(point-cloud-viewer)

# SET LANGUAGE STANDARD
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# CUSTOM EXTERNAL DEPENDENCIES
SET(CUSTOM_CONFIG_PATH ${CMAKE_SOURCE_DIR}/cmake/config)
SET(CMAKE_PREFIX_PATH ${CUSTOM_CONFIG_PATH} ${CMAKE_PREFIX_PATH})
FIND_PACKAGE(imgui REQUIRED)
FIND_PACKAGE(lazperf REQUIRED)
FIND_PACKAGE(tinyfiledialog REQUIRED)

# MANAGED EXTERNAL DEPENDENCIES (VCPKG)
FIND_PACKAGE(PDAL CONFIG REQUIRED)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)
FIND_PACKAGE(SDL3_ttf CONFIG REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glad CONFIG REQUIRED)

ADD_SUBDIRECTORY(plugin)  # [OBSOLETE]
ADD_SUBDIRECTORY(core)

# CREATE EXECUTABLE
ADD_EXECUTABLE(main src/main.cpp)

# BUILD PLUGIN BEFORE TARGET
ADD_DEPENDENCIES(main libpdal_plugin_reader_customlaz)  # [OBSOLETE]

# INCLUDE LIBRARIES IN TARGET
TARGET_LINK_LIBRARIES(main PRIVATE core)

# COPY ASSETS FOLDER TO BUILD DIRECTORY
FILE(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION ${CMAKE_BINARY_DIR})

# HANDLE TESTING
# ENABLE_TESTING()
# ADD_SUBDIRECTORY(test)
# ADD_TEST(NAME unit_tests COMMAND unit_tests)