# GET ALL SOURCE FILES
FILE(GLOB SOURCES src/*.cpp)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# INCLUDE PDAL IN CORE
TARGET_LINK_LIBRARIES(core PUBLIC ${PDAL_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    ${PDAL_INCLUDE_DIRS}
    ${PDAL_INCLUDE_DIRS}/pdal
)