# GET ALL SOURCE FILES
FILE(GLOB SOURCES src/*.cpp)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# LINK LIBRARIES
TARGET_LINK_LIBRARIES(core PUBLIC 
    imgui
    SDL3::SDL3
    OpenGL::GL
    glad::glad
    tinyfiledialog
    ${PDAL_LIBRARIES}
)
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    ${PDAL_INCLUDE_DIRS}
    ${PDAL_INCLUDE_DIRS}/pdal
)