# GET ALL SOURCE FILES
FILE(GLOB CORE_SOURCES src/**/*.cpp)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${CORE_SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE CORE_INCLUDE_SUB_DIRECTORIES LIST_DIRECTORIES TRUE "${CMAKE_CURRENT_SOURCE_DIR}/include/*")
FOREACH(DIRECTORY ${CORE_INCLUDE_SUB_DIRECTORIES})
    IF(IS_DIRECTORY ${DIRECTORY})
        TARGET_INCLUDE_DIRECTORIES(core PUBLIC "${DIRECTORY}")
    ENDIF()
ENDFOREACH()

# LINK LIBRARIES TO CORE
TARGET_LINK_LIBRARIES(core PUBLIC 
    SDL3::SDL3
    SDL3_ttf::SDL3_ttf
    OpenGL::GL
    glad::glad
    imgui
    tinyfiledialog
    lazperf::shared
    ${PDAL_LIBRARIES}
)
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    ${PDAL_INCLUDE_DIRS}
    ${PDAL_INCLUDE_DIRS}/pdal
)