CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(custom-reader-plugin)

# SET LANGUAGE STANDARD
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# CHECK DEPENDENCIES
FIND_PACKAGE(lazperf REQUIRED)
FIND_PACKAGE(PDAL CONFIG REQUIRED)

# RUN CREATE PDAL PLUGIN MACRO TO BUILD/LINK CUSTOM READER
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/macros.cmake)
PDAL_CREATE_PLUGIN(
    TYPE reader
    NAME fastlaz
    VERSION 1.0
    SOURCES 
        CustomLazReader.cpp
        CustomLazReader.hpp
    INCLUDES 
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${PDAL_INCLUDE_DIRS}
        ${PDAL_INCLUDE_DIRS}/pdal
        ${lazperf_SOURCE_DIR}/cpp
        ${lazperf_SOURCE_DIR}/cpp/lazperf
        ${lazperf_SOURCE_DIR}/cpp/lazperf/detail
    LINK_WITH
        ${PDAL_LIBRARIES}
        lazperf_s
)

# CREATE SHARED LIBRARY AT THE CORRECT LOCATION
SET_TARGET_PROPERTIES(libpdal_plugin_reader_fastlaz PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)
INSTALL(TARGETS libpdal_plugin_reader_fastlaz DESTINATION ${CMAKE_BINARY_DIR})